@@ -1,3 +1,4 @@
+* Provide Webgistix with a valid test sku to keep remote tests passing
 * Update PostsData to support get requests
 * Update Shipwire to latest version of dtd.
 * Use real addresses for Shipwire remote fulfillment tests
